--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.536.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
