fix: add Prisma configuration for Vercel deployment - postinstall script, vercel.json config, and proper schema setup

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,5 +4,14 @@
       "source": "/api/(.*)",
       "destination": "/api/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.ts": {
+      "maxDuration": 30
+    }
+  },
+  "env": {
+    "DATABASE_URL": "@database_url",
+    "DIRECT_URL": "@direct_url"
+  }
 } 
