--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "postinstall": "prisma generate"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
-    "@prisma/client": "^6.13.0",
-    "@vercel/node": "^3.0.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.7.1",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
