--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/backend/dist/index.js"
-    }
-  ]
+  "cleanUrls": true
 }
