fix(deploy): serverless runtime, copy backend dist in build, and add ambient types for editor

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "notes-app",
   "version": "1.0.0",
   "description": "A modern, full-stack web application for taking notes, tagging, and filtering them. Built with React, Node.js, TypeScript, and PostgreSQL.",
