--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm --prefix ../backend install --no-audit --no-fund && npm --prefix ../backend run build && tsc -b && vite build",
+    "build": "npm --prefix ../backend install --no-audit --no-fund && npm --prefix ../backend run build && node ./scripts/copy-backend.mjs && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
