--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "cleanUrls": true,
   "functions": {
     "api/**/*.ts": {
-      "runtime": "vercel-node@2.15.10"
+      "runtime": "nodejs20.x"
     }
   }
 }
