--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "notes-app",
   "private": true,
   "version": "1.0.0",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "prisma generate && tsc && vite build",
