feat(auth): add OAuth callback endpoint for Supabase authentication

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ SUPABASE_ANON_KEY="your_supabase_anon_key"
 # Frontend Supabase (if using Supabase auth)
 VITE_SUPABASE_URL="your_supabase_url"
 VITE_SUPABASE_ANON_KEY="your_supabase_anon_key"
+
+# App URL for OAuth redirects
+VITE_APP_URL="https://notes-app-flax-eight.vercel.app"
